fix background image not showing in android build

--- a/textcode/www/css/style.css
+++ b/textcode/www/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .greytilebg {
-	background-image: url('/img/grey.png');
+	background-image: url('../img/grey.png');
     background-repeat: repeat;
 
 }
